# darkpool

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  check_code_files.py  darkpool_progress.txt  temp_config.cpp  temp_ml.txt
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  benchmark_latency.cpp  benchmark_ml_inference.cpp  benchmark_protocol_parsing.cpp  benchmark_throughput.cpp
data/: README.md
include/darkpool/: config.hpp  detector.hpp  types.hpp
include/darkpool/core/: execution_heatmap.hpp  hawkes_process.hpp  hidden_markov_model.hpp  hidden_refill_detector.hpp  order_book_imbalance.hpp  pin_model.hpp  post_trade_drift.hpp  realtime_stream.hpp  slippage_tracker.hpp  trade_clustering.hpp  trade_to_quote_ratio.hpp  vpin_calculator.hpp
include/darkpool/ml/: elastic_net.hpp  feature_engineering.hpp  inference_engine.hpp  lstm_autoencoder.hpp  transformer_model.hpp
include/darkpool/protocols/: fix_parser.hpp  itch_parser.hpp  ouch_parser.hpp  protocol_normalizer.hpp
include/darkpool/strategies/: cross_venue_optimizer.hpp  dark_pool_strategy.hpp  execution_optimizer.hpp  strategy_base.hpp
include/darkpool/utils/: cpu_affinity.hpp  lock_free_queue.hpp  memory_pool.hpp  metrics_collector.hpp  ring_buffer.hpp
include/darkpool/visualization/: websocket_server.hpp
scripts/: format.sh
src/: CMakeLists.txt  config.cpp  main.cpp
src/core/: CMakeLists.txt  detector_impl.cpp  execution_heatmap.cpp  hawkes_process.cpp  hidden_markov_model.cpp  hidden_refill_detector.cpp  order_book_imbalance.cpp  pin_model.cpp  post_trade_drift.cpp  realtime_stream.cpp  slippage_tracker.cpp  trade_clustering.cpp  trade_to_quote_ratio.cpp  vpin_calculator.cpp
src/ml/: CMakeLists.txt  elastic_net.cpp  feature_engineering.cpp  inference_engine.cpp  lstm_autoencoder.cpp  transformer_model.cpp
src/protocols/: CMakeLists.txt  fix_parser.cpp  itch_parser.cpp  ouch_parser.cpp  protocol_normalizer.cpp
src/strategies/: CMakeLists.txt  cross_venue_optimizer.cpp  dark_pool_strategy.cpp  execution_optimizer.cpp
src/utils/: CMakeLists.txt  cpu_affinity.cpp  lock_free_queue.cpp  memory_pool.cpp  metrics_collector.cpp  ring_buffer.cpp
src/visualization/: CMakeLists.txt  websocket_server.cpp
tests/: CMakeLists.txt  data_generator.cpp  test_fix_parser.cpp  test_hawkes_process.cpp  test_itch_parser.cpp  test_main.cpp  test_ml_inference.cpp  test_order_book_imbalance.cpp  test_slippage.cpp  test_strategies.cpp  test_tqr.cpp
